--- a/lab2/.gitignore
+++ b/lab2/.gitignore
@@ -1,53 +1,16 @@
-# ========================
-# C++ Build Outputs
-# ========================
+# Игнорировать ВСЁ
+*
 
-# Папка сборки CMake
-build/
-*/build/
+# НО исключить нужные папки и файлы:
+!src/
+!includes/
+!main.cpp
+!.gitignore
 
-# Исполняемые файлы
-octal_calculator
-octal_tests
-*.exe
-*.out
+# Исключить содержимое папок (чтобы файлы внутри тоже не игнорировались)
+!src/**
+!includes/**
 
-# Объектные файлы
-*.o
-*.a
-*.so
-*.dll
-
-# CMake временные файлы
-CMakeCache.txt
-CMakeFiles/
-cmake_install.cmake
-Makefile
-*.cmake
-!CMakeLists.txt
-
-# Отладочная информация
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# ========================
-# IDE и редакторы
-# ========================
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# ========================
-# Системные файлы
-# ========================
-.DS_Store
-Thumbs.db
-
-# ========================
-# Google Test
-# ========================
-googletest-build/
+# Дополнительные исключения для файлов в корне (если нужно)
+!README.md
+!LICENSE
